<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/topLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimay"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/main_menuButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/option" />

            <TextView
                android:id="@+id/menuText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/main_changeUserButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:paddingRight="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/main_changeuser" />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/adv_pager"
                android:layout_width="fill_parent"
                android:layout_height="250dp">
            </android.support.v4.view.ViewPager>

            <LinearLayout
                android:id="@+id/viewGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/adv_pager"
                android:layout_marginTop="-25px"
                android:gravity="right"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:id="@+id/main_below"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/adv_pager"
                android:background="@drawable/main_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/main_jiankangjianceButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:src="@drawable/main_jiankangkepu" />

                    <ImageButton
                        android:id="@+id/main_jiankangshangchengButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:src="@drawable/main_jiankangkepu" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/health_test"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/health_mall"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/main_yuanchengyiliaoButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:src="@drawable/main_jiankangkepu" />

                    <ImageButton
                        android:id="@+id/main_xianxiayuyueButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:src="@drawable/main_jiankangkepu" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/telemedicine"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/offline_reservation"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>

